--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,33 +1,31 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block head %}
-    {{ super() }}
-    <title>
-        {% block title %} Flask Platzi | {% endblock %}
-    </title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    <link rel="icon" href="{{ url_for('static', filename='images/platzi.png') }}" type="image/x-icon">
+{{ super() }}
+<title>
+    {% block title %} Flask Platzi | {% endblock %}
+</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+<link rel="icon" href="{{ url_for('static', filename='images/platzi.png') }}" type="image/x-icon">
 {% endblock %}
 
 
 {% block body %}
-    {% block navbar %}
-        {% include 'navbar.html' %}
-    {% endblock %}
+{% block navbar %}
+{% include 'navbar.html' %}
+{% endblock %}
 
-    {% for message in get_flashed_messages() %}
-        <div class="alert alert-success alert-dismissible custom-flash" id="flash-message">
-            <button type="button"
-                    data-dismiss="alert"
-                    class="close">&times;</button>
-            {{ message }}
-        </div>
-    {% endfor %}
+{% for message in get_flashed_messages() %}
+<div class="alert alert-success alert-dismissible custom-flash" id="flash-message">
+    <button type="button" data-dismiss="alert" class="close">&times;</button>
+    {{ message }}
+</div>
+{% endfor %}
 
-    {% block content %}{% endblock %}
-    {% block scripts %}
-        {{ super() }}
-    {% endblock %}
+{% block content %}{% endblock %}
+{% block scripts %}
+{{ super() }}
+{% endblock %}
 
 <script>
     setTimeout(function () {
@@ -39,5 +37,3 @@
 </script>
 
 {% endblock %}
-
-
