--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,19 +1,15 @@
 <div class="navbar-custom" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <button type="button"
-                    class="navbar-toggle"
-                    data-toggle="collapse"
-                    data-target=".navbar-collapse">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ url_for('index') }}"
-               style="display: flex; justify-content: center; align-items: center;">
-                <img src="{{ url_for('static', filename='images/platzi.png') }}"
-                     alt="Platzi logo">
+                style="display: flex; justify-content: center; align-items: center;">
+                <img src="{{ url_for('static', filename='images/platzi.png') }}" alt="Platzi logo">
             </a>
         </div>
 
@@ -22,11 +18,13 @@
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="https://platzi.com" target="_blank">Platzi</a></li>
                 {% if request.endpoint == 'auth.login' %}
-                    <li><a href="{{ url_for('auth.signup') }}" >Sign Up</a></li>
+                <li><a href="{{ url_for('auth.signup') }}">Sign Up</a></li>
                 {% endif %}
                 {% if current_user.is_authenticated %}
-                    <li><a href="{{ url_for('auth.logout') }}" >Log Out</a></li>
-                {% endif %}
+                <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
+                <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+            </ul>
+            {% endif %}
             </ul>
         </div>
     </div>
