--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,15 +1,11 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
-{% block title %}
-{{ super() }}
-Login
-{% endblock %}
 
 {% block content %}
 <div class="container vertical-spacing">
     <div class="align-login">
-        {{ wtf.quick_form(login_form) }}
-        <!-- <p><a href="{{ url_for('auth.reset_password') }}">Forgot my password</a></p> -->
+        <h1>Reset Password</h1>
+        {{ wtf.quick_form(reset_password_form) }}
     </div>
 </div>
 {% endblock %}
