--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -20,6 +20,20 @@ img {
     }
 }
 
+.form {
+    .form-group {
+        input.form-control {
+            background-color: transparent;
+            border-radius: 10em;
+        }
+    }
+
+    input.btn.btn-default {
+        background-color: transparent;
+        border-radius: 10em;
+    }
+}
+
 .custom-flash {
     width: 300px;
     height: auto;
@@ -77,23 +91,4 @@ img {
 .right-align {
     margin-left: auto;
     /* Alinea el div a la derecha */
-}
-
-/* main.css */
-.custom-input {
-    /* Cambia los estilos de los campos de formulario, por ejemplo, el color de fondo */
-    background-color: #EFEFEF;
-    /* Cambia el color de fondo a gris claro */
-    color: #333;
-    /* Cambia el color del texto a negro */
-    /* Agrega cualquier otro estilo personalizado que desees */
-}
-
-.custom-button {
-    /* Cambia los estilos del botón, por ejemplo, el color de fondo y el color del texto */
-    background-color: #007BFF;
-    /* Cambia el color de fondo a azul */
-    color: #FFFFFF;
-    /* Cambia el color del texto a blanco */
-    /* Agrega cualquier otro estilo personalizado que desees */
 }
