--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -4,17 +4,18 @@
 <li class="list-group-item">
     <div class="form-align-center">
         <div style="margin-right: auto">
-            Description: {{ todo.to_dict().description }}
+            Description: {{ todo.description }} {# Accede a la descripción directamente #}
         </div>
         <div class="row form-align-center">
             <div class="col">
                 {{ wtf.quick_form(delete_form, action=url_for('delete', todo_id=todo.id)) }}
             </div>
             <div class="col">
-                {{ wtf.quick_form(update_form, action=url_for('update', todo_id=todo.id, done=todo.to_dict().done)) }}
+                {{ wtf.quick_form(update_form, action=url_for('update', todo_id=todo.id, done=todo.done)) }} {# Accede a
+                done directamente #}
             </div>
             <div class="col horizontal-spacing">
-                <span class="badge">{{ todo.to_dict().done }}</span>
+                <span class="badge">{{ todo.done }}</span> {# Accede a done directamente #}
             </div>
         </div>
     </div>
