--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -4,7 +4,7 @@
 <li class="list-group-item">
     <div class="form-align-center">
         <div style="margin-right: auto">
-            Description: {{ todo.description }} {# Accede a la descripción directamente #}
+            {{ todo.description }} {# Accede a la descripción directamente #}
         </div>
         <div class="row form-align-center">
             <div class="col">
