--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,24 +7,22 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('index') }}"
-                style="display: flex; justify-content: center; align-items: center;">
-                <img src="{{ url_for('static', filename='images/platzi.png') }}" alt="Platzi logo">
+            <a class="navbar-brand" href="{{ url_for('index') }}">
+                <img src="{{ url_for('static', filename='images/task-logo.svg') }}" alt="Task logo"
+                    type="image/svg+xml">
             </a>
         </div>
 
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="https://platzi.com" target="_blank">Platzi</a></li>
                 {% if request.endpoint == 'auth.login' %}
                 <li><a href="{{ url_for('auth.signup') }}">Sign Up</a></li>
                 {% endif %}
                 {% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
                 <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
-            </ul>
-            {% endif %}
+                {% endif %}
             </ul>
         </div>
     </div>
